mutants.out.old/log/src__tls.rs_line_130_col_9.log

*** src/tls.rs:130:9: replace <impl Deref for TlsStream<S>>::deref -> &Self::Target with &Default::default()

*** mutation diff:
--- src/tls.rs
+++ replace <impl Deref for TlsStream<S>>::deref -> &Self::Target with &Default::default()
@@ -122,17 +122,17 @@
             .await?;
         Self::new(stream, self.connector.clone(), &self.hostname).await
     }
 }
 
 impl<S> Deref for TlsStream<S> {
     type Target = NativeTlsStream<S>;
     fn deref(&self) -> &Self::Target {
-        &self.stream
+        &Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl<S> DerefMut for TlsStream<S> {
     fn deref_mut(&mut self) -> &mut Self::Target {
         &mut self.stream
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `tokio_native_tls::TlsStream<S>: Default` is not satisfied
   --> src/tls.rs:130:10
    |
130 |         &Default::default() /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `tokio_native_tls::TlsStream<S>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
